--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>ok</p>
+    <p>hari ini saya belajar banyak mengenai html bersama Pak Trimans</p>
   </body>
 </html>
